# docs/swagger.yaml
@@ -1,13 +1,5 @@
 basePath: /api/v1
 definitions:
-  http.CreateUserRequest:
-    type: object
-  http.ErrorResponse:
-    type: object
-  http.UpdateUserRequest:
-    type: object
-  http.UserResponse:
-    type: object
   model.LoginRequest:
     properties:
       email:
@@ -24,6 +16,33 @@ definitions:
       token:
         type: string
     type: object
+  model.PaginationModel:
+    properties:
+      current_page:
+        type: integer
+      per_page:
+        type: integer
+      total_data:
+        type: integer
+      total_page:
+        type: integer
+    type: object
+  model.PaginationRequest:
+    properties:
+      filter:
+        additionalProperties: true
+        type: object
+      page:
+        type: integer
+      per_page:
+        type: integer
+    type: object
+  model.PaginationResponse:
+    properties:
+      data: {}
+      metadata:
+        $ref: '#/definitions/model.PaginationModel'
+    type: object
   model.RegisterRequest:
     properties:
       email:
@@ -39,6 +58,42 @@ definitions:
       response_error:
         type: string
       response_message:
+        type: string
+    type: object
+  model.UserCreateRequest:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+      phone_number:
+        type: string
+    type: object
+  model.UserResponse:
+    properties:
+      created_at:
+        type: string
+      created_by:
+        type: string
+      deleted_at:
+        type: string
+      deleted_by:
+        type: string
+      email:
+        type: string
+      id:
+        type: integer
+      password:
+        type: string
+      phone_number:
+        type: string
+      updated_at:
+        type: string
+      updated_by:
+        type: string
+      user_code:
+        type: integer
+      uuid:
         type: string
     type: object
 host: localhost:8080
@@ -105,105 +160,73 @@ paths:
       summary: Register
       tags:
       - auth
-  /users:
+  /users/create:
     post:
-      consumes:
-      - application/json
-      description: Creates a new user
+      description: Create a new user
       parameters:
-      - description: User data
+      - description: Body User Create
         in: body
-        name: user
+        name: body
         required: true
         schema:
-          $ref: '#/definitions/http.CreateUserRequest'
+          $ref: '#/definitions/model.UserCreateRequest'
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
+        "200":
+          description: success create user
           schema:
-            $ref: '#/definitions/http.UserResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/http.ErrorResponse'
+            allOf:
+            - $ref: '#/definitions/model.Response'
+            - properties:
+                response_data:
+                  type: string
+              type: object
+      security:
+      - ApiKeyAuth: []
       summary: Create a new user
-  /users/{id}:
-    delete:
-      description: Deletes a user by ID
+      tags:
+      - Users
+  /users/list:
+    post:
+      description: Retrieves a list of users
       parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      responses:
-        "204":
-          description: No Content
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/http.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/http.ErrorResponse'
-      summary: Delete a user by ID
-    get:
-      description: Retrieves a user by ID
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/http.UserResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/http.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/http.ErrorResponse'
-      summary: Get a user by ID
-    put:
-      consumes:
-      - application/json
-      description: Updates an existing user
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: User data
+      - description: Body Pagination
         in: body
-        name: user
-        required: true
+        name: body
         schema:
-          $ref: '#/definitions/http.UpdateUserRequest'
+          $ref: '#/definitions/model.PaginationRequest'
       produces:
       - application/json
       responses:
         "200":
-          description: OK
+          description: success get list user
           schema:
-            $ref: '#/definitions/http.UserResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/http.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/http.ErrorResponse'
-      summary: Update an existing user
+            allOf:
+            - $ref: '#/definitions/model.Response'
+            - properties:
+                response_data:
+                  allOf:
+                  - $ref: '#/definitions/model.PaginationResponse'
+                  - properties:
+                      data:
+                        $ref: '#/definitions/model.UserResponse'
+                    type: object
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Get a list of users
+      tags:
+      - Users
+produces:
+- application/json
+schemes:
+- http
+- https
+securityDefinitions:
+  ApiKeyAuth:
+    description: Description for what is this security definition being used
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
